<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/tv_detail_progress"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:indeterminateTint="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/background_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/background_frame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_progress">

            <ImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster"
                android:scaleType="fitXY" />

            <ImageButton
                android:id="@+id/add_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:contentDescription="@string/favorite"
                android:src="@drawable/ic_favorite_border" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/poster_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="144dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/poster"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toEndOf="@id/poster_card"
            app:layout_constraintTop_toBottomOf="@id/background_frame" />

        <androidx.cardview.widget.CardView
            android:id="@+id/length_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/text_card_one"
            app:layout_constraintStart_toEndOf="@id/poster_card"
            app:layout_constraintTop_toBottomOf="@id/rating">

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                tools:text="8 Episodes" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/episode_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/text_card_two"
            app:layout_constraintStart_toEndOf="@id/length_card"
            app:layout_constraintTop_toBottomOf="@id/rating">

            <TextView
                android:id="@+id/episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                tools:text="49 min" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/poster_card"
            app:layout_constraintTop_toBottomOf="@+id/length_card"
            tools:text="2014-13-13" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster_card"
            tools:text="How To Train Your Dragon" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/homepage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/official_home_page"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <TextView
            android:id="@+id/homepage_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:focusable="true"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homepage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>