<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-aut`o">

    <item
        android:id="@+id/popular"
        android:icon="@drawable/ic_popular"
        android:title="@string/popular"
        app:cnb_iconColor="#FFE70E"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:cnb_iconColor="#62F139"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:cnb_iconColor="#E931EF"/>

</menu>