<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/popular_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.popular.PopularActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/pop_tabs"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pop_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pop_tabs" />

    </RelativeLayout>

    <include
        layout="@layout/item_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        android:layout_gravity="bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>