<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.popular.tvshows.PopularTvShowFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/pop_tv_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_vertical_list_placeholder" />

                <include layout="@layout/item_vertical_list_placeholder" />

                <include layout="@layout/item_vertical_list_placeholder" />

                <include layout="@layout/item_vertical_list_placeholder" />
            </LinearLayout>
        </ScrollView>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pop_tv_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_tv_progress"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        tools:listitem="@layout/item_tv_show" />

</RelativeLayout>