<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.tvshows.TvShowsFragment">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/tv_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_tv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_progress"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search"
        app:queryHint="Search By Title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_tv_show"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        tools:listitem="@layout/item_tv_show" />

</RelativeLayout>